--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,121 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Arkaprava Choudhury
     - name: Date of Birth
-      value: 14th March 1879
+      value: 17th March 2004
     - name: Languages
-      value: English, German
+      value: English, French, Hindi, Bangla
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: H.B.Sc. with High Distinction.
+      institution: University of Toronto, Toronto, Canada
+      year: 2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - title: Computer Science specialist program.
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+            - Focus in the Theory of Computation.
+        - Mathematics specialist program.
+        - title: Affiliations.
+          contents:
+            - Centre for Quantum Information and Quantum Control.
+            - Department of Computer Science.
+        - title: Student groups.
+          contents:
+            - UofT Quantum Computing club.
+            - Q-SITE Conference.
+            - UofT CS Undergraduate Theory Society
+            - UofT Computer Science Student Union.
+    # - title: Federal teaching diploma
+    #   institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+    #   year: 1900
+    #   description:
+    #     - Description 1.
+    #     - Description 2.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Teaching assistant
+      institution: Department of CS, University of Toronto
+      year: 2024
+    - title: Peer mentor
+      institution: Faculty of ArtSci, University of Toronto
+      year: 2023-2024
+    - title: Research student
+      institution: University of Toronto
+      year: 2023
+    - title: Part-time research student
+      institution: Matter Lab, University of Toronto
+      year: 2021-2023
+    - title: Research assistant
+      institution: Department of CS, University of Toronto
+      year: 2022
+      # description:
+      #   - Description 1.
+      #   - Description 2.
+    - title: Summer undergraduate research fellow
+      institution: CQIQC, University of Toronto
+      year: 2022
+      # description:
+      #   - title: Description 1.
+      #     contents:
+      #       - Sub-description 1.
+      #       - Sub-description 2.
+      #   - Description 2.
+    - title: Summer research student
+      institution: Matter Lab, University of Toronto
+      year: 2021
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://github.com/tequilahub">Tequila</a>
+      year: 2020-2022
+      description: Abstract fully auto-differentiable quantum computing library.
 
-- title: Honors and Awards
+- title: Selected Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2024
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - UofT Faculty of ArtSci Dean's List
+    - year: 2022
       items:
-        - Max Planck Medal
+        - CQIQC Summer Undergraduate Research Fellowship
+        - UofT DCS Summer Research Award
+        - Samuel Beatty Fund In-Course Scholarship
+    - year: 2021
+      items:
+        - Trinity College Chancellor's Award
+    # - year: 2020
+    #   items:
+    #     - UofT Incoming Student Scholarship
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Quantum computation.
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Quantum Hamiltonian simulation
+        - Quantum complexity theory.
+        - Quantum information theory.
+    - title: Operator algebras.
       items:
-        - Description 1.
-        - Description 2.
+        - Nonlocal games.
+        - Quantum channels.
+    - title: Theoretical computer science.
+      items:
+        - Online resouce allocation.
+        - Complexity theory.
+    - title: Discrete mathematics problems.
+      items:
+        - Graph theory (spectral graphs and expanders).
+        - Integer programs.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Teaching, Shogi, Cycling, Verilog.
